<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UX-FeedBack</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Default Hello World string</string>
    <string name="title_activity_survey_popup__method1">AttrakDiff spørgeskema</string>
    <string name="title_activity_survey_popup__method2">SurveyPopup_Method2</string>
    
    <string name="m1_q1_L">Human</string>
    <string name="m1_q1_R">Technical</string>
    <string name="m1_q2_L">Isolating</string>
    <string name="m1_q2_R">Connective</string>
    <string name="m1_q3_L">Pleasant</string>
    <string name="m1_q3_R">Unpleasant</string>
    <string name="m1_q4_L">Inventive</string>
    <string name="m1_q4_R">Conventional</string>
    <string name="m1_q5_L">Simple</string>
    <string name="m1_q5_R">Complicated</string>
    <string name="m1_q6_L">Professional</string>
    <string name="m1_q6_R">Unprofessional</string>
    <string name="m1_q7_L">Ugly</string>
    <string name="m1_q7_R">Attractive</string>
    <string name="m1_q8_L">Practical</string>
    <string name="m1_q8_R">Impractical</string>
    <string name="m1_q9_L">Likeable</string>
    <string name="m1_q9_R">Disagreeable</string>
    <string name="m1_q10_L">Cumbersome</string>
    <string name="m1_q10_R">Straightforward</string>
    <string name="m1_q11_L">Stylish</string>
    <string name="m1_q11_R">Tacky</string>
    <string name="m1_q12_L">Predictable</string>
    <string name="m1_q12_R">Unpredictable</string>
    <string name="m1_q13_L">Cheap</string>
    <string name="m1_q13_R">Premium</string>
    <string name="m1_q14_L">Alienating</string>
    <string name="m1_q14_R">Integrating</string>
    <string name="m1_q15_L">Brings me closer</string>
    <string name="m1_q15_R">Separates me</string>
    <string name="m1_q16_L">Unpresentable</string>
    <string name="m1_q16_R">Presentable</string>
    <string name="m1_q17_L">Rejecting</string>
    <string name="m1_q17_R">Inviting</string>
    <string name="m1_q18_L">Unimaginative</string>
    <string name="m1_q18_R">Creative</string>
    <string name="m1_q19_L">Good</string>
    <string name="m1_q19_R">Bad</string>
    <string name="m1_q20_L">Confusing</string>
    <string name="m1_q20_R">Clearly structured</string>
    <string name="m1_q21_L">Repelling</string>
    <string name="m1_q21_R">Appealing</string>
    <string name="m1_q22_L">Bold</string>
    <string name="m1_q22_R">Cautious</string>
    <string name="m1_q23_L">Innovative</string>
    <string name="m1_q23_R">Conservative</string>
    <string name="m1_q24_L">Dull</string>
    <string name="m1_q24_R">Captivating</string>
    <string name="m1_q25_L">Undemanding</string>
    <string name="m1_q25_R">Challenging</string>
    <string name="m1_q26_L">Motivating</string>
    <string name="m1_q26_R">Discouraging</string>
    <string name="m1_q27_L">Novel</string>
    <string name="m1_q27_R">Ordinary</string>
    <string name="m1_q28_L">Unruly</string>
    <string name="m1_q28_R">Manageable</string>
    <string name="title_activity_survey_method1_part1">Spørgeskema - Del 1 af 3</string>
    <string name="title_activity_survey_method1_part2">Spørgeskema - Del 2 af 3</string>
    <string name="title_activity_survey_method1_part3">Spørgeskema - Del 3 af 3</string>    
    <string name="Questionnaire_instructions">Her står der noget tekst om hvordan brugerne skal forholde sig til spørgeskemaet.</string>
    <string name="Questionnaire_thanks">Tak for din deltagelse i vores undersøgelse.</string>

</resources>