<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"        
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Survey_method1_part3"
    android:id="@+id/ScrollView_m1_p3">    
    
<LinearLayout 
    android:paddingRight="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"    
    android:orientation="vertical">
    
    <!-- Question 20 -->
    <LinearLayout
    android:orientation="vertical"       
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    	<RelativeLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content" >
    	    <TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q20_L"
    	    android:layout_alignParentLeft="true"
    	    android:layout_alignParentTop="true"/> 
    	 	<TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q20_R"
    	    android:layout_alignParentRight="true"
    	    android:layout_alignParentTop="true"/>    	    
    	</RelativeLayout> 
    	<RadioGroup
    	    android:id="@+id/RadioGroup_m1_q20"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content">
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	</RadioGroup>    	 
</LinearLayout>

    <View style="@style/LineSeparator"/>

<!-- Question 21 -->
    <LinearLayout        
    android:orientation="vertical"       
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    	<RelativeLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content" >
    	    <TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q21_L"
    	    android:layout_alignParentLeft="true"
    	    android:layout_alignParentTop="true"/> 
    	 	<TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q21_R"
    	    android:layout_alignParentRight="true"
    	    android:layout_alignParentTop="true"/>    	    
    	</RelativeLayout> 
    	<RadioGroup	   
    	    android:id="@+id/RadioGroup_m1_q21"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content">
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	</RadioGroup>    	 
</LinearLayout>

    <View style="@style/LineSeparator"/>

    <!-- Question 22 -->
    
    <LinearLayout
    android:orientation="vertical"       
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    	<RelativeLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content" >
    	    <TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q22_L"
    	    android:layout_alignParentLeft="true"
    	    android:layout_alignParentTop="true"/> 
    	 	<TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q22_R"
    	    android:layout_alignParentRight="true"
    	    android:layout_alignParentTop="true"/>    	    
    	</RelativeLayout> 
    	<RadioGroup	   
    	    android:id="@+id/RadioGroup_m1_q22"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content">
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	</RadioGroup>    	 
</LinearLayout>

    <View style="@style/LineSeparator"/>
	
    <!-- Question 23 -->
    
    <LinearLayout
    android:orientation="vertical"       
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    	<RelativeLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content" >
    	    <TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q23_L"
    	    android:layout_alignParentLeft="true"
    	    android:layout_alignParentTop="true"/> 
    	 	<TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q23_R"
    	    android:layout_alignParentRight="true"
    	    android:layout_alignParentTop="true"/>    	    
    	</RelativeLayout> 
    	<RadioGroup	   
    	    android:id="@+id/RadioGroup_m1_q23"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content">
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	</RadioGroup>    	 
</LinearLayout>

    <View style="@style/LineSeparator"/>

    <!-- Question 24 -->
    
    <LinearLayout
    android:orientation="vertical"       
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    	<RelativeLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content" >
    	    <TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q24_L"
    	    android:layout_alignParentLeft="true"
    	    android:layout_alignParentTop="true"/> 
    	 	<TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q24_R"
    	    android:layout_alignParentRight="true"
    	    android:layout_alignParentTop="true"/>    	    
    	</RelativeLayout> 
    	<RadioGroup	   
    	    android:id="@+id/RadioGroup_m1_q24"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content">
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	</RadioGroup>    	 
</LinearLayout>

    <View style="@style/LineSeparator"/>

    <!-- Question 25 -->
    
    <LinearLayout
    android:orientation="vertical"       
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    	<RelativeLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content" >
    	    <TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q25_L"
    	    android:layout_alignParentLeft="true"
    	    android:layout_alignParentTop="true"/> 
    	 	<TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q25_R"
    	    android:layout_alignParentRight="true"
    	    android:layout_alignParentTop="true"/>    	    
    	</RelativeLayout> 
    	<RadioGroup	   
    	    android:id="@+id/RadioGroup_m1_q25"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content">
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	</RadioGroup>    	 
</LinearLayout>

    <View style="@style/LineSeparator"/>
    
    <!-- Question 26 -->
    
    <LinearLayout
    android:orientation="vertical"       
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    	<RelativeLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content" >
    	    <TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q26_L"
    	    android:layout_alignParentLeft="true"
    	    android:layout_alignParentTop="true"/> 
    	 	<TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q26_R"
    	    android:layout_alignParentRight="true"
    	    android:layout_alignParentTop="true"/>    	    
    	</RelativeLayout> 
    	<RadioGroup	   
    	    android:id="@+id/RadioGroup_m1_q26"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content">
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	</RadioGroup>    	 
</LinearLayout>

    <View style="@style/LineSeparator"/>

    <!-- Question 27 -->
    
    <LinearLayout
    android:orientation="vertical"       
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    	<RelativeLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content" >
    	    <TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q27_L"
    	    android:layout_alignParentLeft="true"
    	    android:layout_alignParentTop="true"/> 
    	 	<TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q27_R"
    	    android:layout_alignParentRight="true"
    	    android:layout_alignParentTop="true"/>    	    
    	</RelativeLayout> 
    	<RadioGroup	   
    	    android:id="@+id/RadioGroup_m1_q27"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content">
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	</RadioGroup>    	 
</LinearLayout>

    <View style="@style/LineSeparator"/>

    <!-- Question 28 -->
    
    <LinearLayout
    android:orientation="vertical"       
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    	<RelativeLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content" >
    	    <TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q28_L"
    	    android:layout_alignParentLeft="true"
    	    android:layout_alignParentTop="true"/> 
    	 	<TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:text="@string/m1_q28_R"
    	    android:layout_alignParentRight="true"
    	    android:layout_alignParentTop="true"/>    	    
    	</RelativeLayout> 
    	<RadioGroup	   
    	    android:id="@+id/RadioGroup_m1_q28"
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content">
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />
    	    <RadioButton android:layout_weight="1" />    	    
    	</RadioGroup>    	 
</LinearLayout>

    <View style="@style/LineSeparator"/>    

    <Button 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="Afslut" 
        android:layout_margin="5dp"
        android:onClick="btn_next_clicked"/>
</LinearLayout>
 </ScrollView>
